// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthereumSig should create propose envelope 1`] = `
{
  "data": {
    "authenticator": "0x86bfa0726cba0febeee457f04b705ab74b54d01c",
    "executionParams": [],
    "executor": "0xb1001fdf62c020761039a750b27e73c512fdaa5e",
    "metadataUri": "ipfs://QmNrm6xKuib1THtWkiN5CKtBEerQCDpUtmgDqiaU2xDmca",
    "space": "0x6d5608420702714a6c8168ec9c70706e8d1cf641",
    "strategies": [
      {
        "address": "0x395ed61716b48dc904140b515e9f682e33330154",
        "index": 0,
      },
    ],
  },
  "signatureData": {
    "address": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
    "domain": {
      "chainId": 31337,
      "name": "SOC",
      "verifyingContract": "0x86bfa0726cba0febeee457f04b705ab74b54d01c",
      "version": "1",
    },
    "message": {
      "author": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
      "executionStrategy": {
        "addy": "0xb1001fdf62c020761039a750b27e73c512fdaa5e",
        "params": "0x00",
      },
      "metadataUri": "ipfs://QmNrm6xKuib1THtWkiN5CKtBEerQCDpUtmgDqiaU2xDmca",
      "salt": 0,
      "space": "0x6d5608420702714a6c8168ec9c70706e8d1cf641",
      "userVotingStrategies": [
        {
          "index": 0,
          "params": "0x00",
        },
      ],
    },
    "signature": "0x325bfc82ad50aeeecc5e693e5e84508febddf5336dbac26f5a148ff6bd23dfb4797a34e9a238102447c749b2acfb92282da3f0240d46c132e5ce18d05795d9751c",
    "types": {
      "IndexedStrategy": [
        {
          "name": "index",
          "type": "uint8",
        },
        {
          "name": "params",
          "type": "bytes",
        },
      ],
      "Propose": [
        {
          "name": "space",
          "type": "address",
        },
        {
          "name": "author",
          "type": "address",
        },
        {
          "name": "metadataUri",
          "type": "string",
        },
        {
          "name": "executionStrategy",
          "type": "Strategy",
        },
        {
          "name": "userVotingStrategies",
          "type": "IndexedStrategy[]",
        },
        {
          "name": "salt",
          "type": "uint256",
        },
      ],
      "Strategy": [
        {
          "name": "addy",
          "type": "address",
        },
        {
          "name": "params",
          "type": "bytes",
        },
      ],
    },
  },
}
`;

exports[`EthereumSig should create vote envelope 1`] = `
{
  "data": {
    "authenticator": "0x86bfa0726cba0febeee457f04b705ab74b54d01c",
    "choice": 1,
    "proposal": 3,
    "space": "0x6d5608420702714a6c8168ec9c70706e8d1cf641",
    "strategies": [
      {
        "address": "0x395ed61716b48dc904140b515e9f682e33330154",
        "index": 0,
      },
    ],
  },
  "signatureData": {
    "address": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
    "domain": {
      "chainId": 31337,
      "name": "SOC",
      "verifyingContract": "0x86bfa0726cba0febeee457f04b705ab74b54d01c",
      "version": "1",
    },
    "message": {
      "choice": 1,
      "proposalId": 3,
      "salt": 0,
      "space": "0x6d5608420702714a6c8168ec9c70706e8d1cf641",
      "userVotingStrategies": [
        {
          "index": 0,
          "params": "0x00",
        },
      ],
      "voter": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
    },
    "signature": "0x58e9230f4ca63c650d0cfdfa94da3fe0ad1a0688435e1bbababb2fc42014230805ad318b14e615fbb0743a9bab0ef00b03238840100842f7c7f2da6d4ba423ed1c",
    "types": {
      "IndexedStrategy": [
        {
          "name": "index",
          "type": "uint8",
        },
        {
          "name": "params",
          "type": "bytes",
        },
      ],
      "Vote": [
        {
          "name": "space",
          "type": "address",
        },
        {
          "name": "voter",
          "type": "address",
        },
        {
          "name": "proposalId",
          "type": "uint256",
        },
        {
          "name": "choice",
          "type": "uint8",
        },
        {
          "name": "userVotingStrategies",
          "type": "IndexedStrategy[]",
        },
        {
          "name": "salt",
          "type": "uint256",
        },
      ],
    },
  },
}
`;
